Removed display of how many users are connected due to errors

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Chat Room!</h1>
-<p>Number of users active: <b id="userCount"></b></p>
+<!--<p>Number of users active: <b id="userCount"></b></p>-->
 <form>
     <input id="message" type="text" placeholder="message" />
     <input type="submit" value="Send" />
